# LemmaCalc-

./: LICENSE  README.md  calc.py  history.json  requirements.txt  run_calc.py  test_calculator.py
docs/: man.txt  tldr.txt
lemma_calc/: constants.py  core.py  core_utils.py  display.py  history.py  input_handler.py  main.py  preprocessor.py  prompt_utils.py  pyproject.toml
tests/: test_calc.py
